--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button color="tertiary" defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Nombre de la lista</ion-title>
+    <ion-title> {{ list.title }} </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,7 +11,9 @@
   <ion-list color="dark">
     <ion-item color="dark">
       <ion-label position="floating">Nuevo item</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" 
+                 [(ngModel)]="itemName"
+                 (keyup.enter)="addItem()"></ion-input>
     </ion-item>
   </ion-list>
 
@@ -19,9 +21,14 @@
     <ion-list-header color="dark">
       <ion-label> Tareas por hacer</ion-label>
     </ion-list-header>
-    <ion-item color="dark">
-      <ion-checkbox slot="start" color="tertiary"></ion-checkbox>
-      <ion-label>Recordar comer hoy</ion-label>
+    <ion-item color="dark"
+              *ngFor="let item of list.items"
+              class="animated fadeInDown">
+      <ion-checkbox slot="start" 
+                    color="tertiary"
+                    [(ngModel)]="item.completed"
+                    (ionChange)="checkChanged(item)"></ion-checkbox>
+      <ion-label>{{ item.desc }}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
