--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -21,14 +21,21 @@
     <ion-list-header color="dark">
       <ion-label> Tareas por hacer</ion-label>
     </ion-list-header>
-    <ion-item color="dark"
-              *ngFor="let item of list.items"
-              class="animated fadeInDown">
-      <ion-checkbox slot="start" 
-                    color="tertiary"
-                    [(ngModel)]="item.completed"
-                    (ionChange)="checkChanged(item)"></ion-checkbox>
-      <ion-label>{{ item.desc }}</ion-label>
-    </ion-item>
+
+    <ion-item-sliding *ngFor="let item of list.items; let i = index"
+                      class="animated fadeInDown">
+      <ion-item color="dark">
+        <ion-checkbox slot="start" 
+                      color="tertiary"
+                      [(ngModel)]="item.completed"
+                      (ionChange)="checkChanged(item)"></ion-checkbox>
+        <ion-label>{{ item.desc }}</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="delete(i)" color="danger">
+          <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 </ion-content>
