--- a/src/app/pages/add/add.page.html
+++ b/src/app/pages/add/add.page.html
@@ -18,7 +18,8 @@
   </ion-list>
 
   <ion-list>
-    <ion-list-header color="dark">
+    <ion-list-header color="dark"
+                     *ngIf = "list.items.length > 0">
       <ion-label> Tareas por hacer</ion-label>
     </ion-list-header>
 
