--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content color="dark">
+    <app-lists></app-lists>
     <ion-list color="dark">
       <ion-item color="dark" 
                 *ngFor="let list of deseosService.lists"
