--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -1,11 +1,11 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header no-border>
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab Two
+      Terminados
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <app-lists></app-lists>
+<ion-content color="dark">
+    <app-lists [finished]="true"></app-lists>
 </ion-content>
